# afterbuy-mirakl-vente-

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  html.html  nginx.conf  pyproject.toml  test_output.csv  test_output2.csv
alembic/: env.py
alembic/versions/: 3c3881ad34a4_market_xl_jv.py  90526adb3f7a_initial.py  adedce1f187b_shop_destination_vente_or_xxxlutz_.py
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh
backend/docs/: api.md  data.md  overview.md
backend/logs/: config_logs.py
backend/src/: main.py  models.py
docs/: api.md  overview.md
docs/modules/: const.md  core.md  routers.md  services.md  src.md  utils.md
extrup-admin/: .dockerignore  DOCKER_README.md  Dockerfile  next.config.mjs  package-lock.json  package.json
extrup-admin/app/: layout.tsx  page.tsx
extrup-admin/components/: admin-layout.tsx  dashboard-overview.tsx  fabrics-management.tsx  file-manager.tsx  image-verification.tsx  payment-management.tsx  product-import.tsx  user-management.tsx
extrup-admin/contexts/: auth-context.tsx
extrup-admin/lib/: api-client.ts  types.ts
logs/: config_logs.py
src/: main.py  models.py  resources.py  schemas.py
src/const/: constants.py  prompts.py
src/core/: dependencies.py  security.py  settings.py
src/crud/: products.py  user.py
src/routers/: dev_router.py  fabric_management.py  mirakl_system_router.py  product_router.py  test_router.py  user_router.py
src/schemas/: ai_schemas.py  product_schemas.py  user_schemas.py
src/services/: afterbuy_api_calls.py  agents.py  csv_converter.py  mapping.py  mirakl_api_calls.py
src/utils/: create_admin.py  format_attr.py  format_ean.py  format_html.py  format_little.py  image_worker.py  substitute_formatter.py
(+1231 files in other folders)
