[project]
name = "xxlmebel-1-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "starlette",
    "pydantic",
    "python-dotenv",
    "pydantic_settings",
    "psycopg2-binary",
    "requests",
    "pandas>=2.3.2",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
]
