[project]
name = "xxlmebel-1-api"
version = "0.1.0"
description = "Afterbuy mirakl middlware"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "starlette",
    "pydantic",
    "python-dotenv",
    "pydantic_settings",
    "psycopg2-binary",
    "requests",
    "pandas>=2.3.2",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "aiohttp>=3.12.15",
    "aioftp>=0.26.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "alembic>=1.16.5",
    "sqlalchemy[asyncio]>=2.0.43",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "pydantic-ai>=1.0.10",
    "openai>=1.109.0",
]
